bug fixing and improving template management
